# RotaOptimaldsCpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  animate_colreg_scenario.py  plot_colreg_scenario.py  plot_receding.py  receding_samepoint_reverse.csv  receding_samepoint_reverse_fix.csv  waypoints_samepoint_reverse.csv  waypoints_samepoint_reverse_fix.csv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
RotaOptimaldsPy/: README.md  compare_solver_speed.py  main.py  obstacle_avoidance.py  plot_receding.py  requirements.txt  rota_optimal_ds.py  rota_optimal_ds_acados.py  scenario_parser.py
RotaOptimaldsPy/scenarios/: rotaoptimalds_default_alt.ini  rotaoptimalds_obstacle.ini  rotaoptimalds_obstacle_alt.ini  rotaoptimalds_samepoint_reverse_heading.ini
scenarios/: colreg_crossing_port.ini  colreg_crossing_starboard.ini  colreg_head_on.ini  colreg_overtaken_by_target.ini  colreg_overtaking_own.ini  colreg_runner.ini  obstacles_many.csv  rotaoptimalds_default.ini  rotaoptimalds_samepoint_reverse_heading.ini
src/: OptimalRota.hpp  colreg_classifier.cpp  colreg_classifier.hpp  colreg_scenarios.cpp  colreg_scenarios.hpp  colreg_types.hpp  main.cpp  obstacle_avoidance.cpp  rota_optimal_ds.cpp  rota_optimal_ds.hpp  scenario_parser.cpp  scenario_parser.hpp
